Add Docker support, CI pipeline, and improve documentation